<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">DfM: Error Logs</string>
	<string name="service_error_title">Site error check</string>
	<string name="notification_text">Errors count: %d</string>
	<string name="email">e-mail</string>
	<string name="password">password</string>
	<string name="login">login</string>
	<string name="tfa">tfa</string>
	<string name="empty">No errors</string>
	<string name="stop_service">stop service</string>
	<string name="start_service">start service</string>
</resources>
