<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".StartActivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="?attr/pig"
		android:contentDescription="@string/app_name"
		/>

	<EditText
		android:id="@+id/email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/email"
		android:inputType="textEmailAddress"
		android:autofillHints="emailAddress"
		android:imeOptions="actionNext"
		android:nextFocusDown="@id/password"
		android:text="@string/test_user"
		/>

	<EditText
		android:id="@+id/password"
		android:inputType="textPassword"
		android:hint="@string/password"
		android:text="@string/test_pass"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:importantForAutofill="no"
		/>

	<EditText
		android:id="@+id/tfa"
		android:inputType="numberPassword"
		android:hint="@string/tfa"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:onClick="login"
		/>

</LinearLayout>
